Change removeEntry to getValues.removeEntry() to fix Refresh crashes (single dataset)